# ResumeScore-AI

./: app.py  pyproject.toml  style.css
templates/: index.html
