[project]
name = "resumescore"
version = "0.1.0"
description = "This project is ATS score of resume"
authors = [
    {name = "Lavanya S"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
